Port to 1.20 but anything i do crashes game