@@ -2,42 +2,27 @@ package assets.rivalrebels.datagen;
 
 import assets.rivalrebels.common.block.RRBlocks;
 import assets.rivalrebels.common.item.RRItems;
-import com.mojang.datafixers.util.Pair;
-import net.minecraft.data.DataGenerator;
-import net.minecraft.data.server.BlockLootTableGenerator;
-import net.minecraft.data.server.LootTableProvider;
-import net.minecraft.loot.LootTable;
-import net.minecraft.loot.LootTableReporter;
-import net.minecraft.loot.context.LootContextType;
+import net.fabricmc.fabric.api.datagen.v1.FabricDataOutput;
+import net.minecraft.data.server.loottable.BlockLootTableGenerator;
+import net.minecraft.data.server.loottable.LootTableProvider;
 import net.minecraft.loot.context.LootContextTypes;
-import net.minecraft.util.Identifier;
+import net.minecraft.resource.featuretoggle.FeatureSet;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
-import java.util.function.BiConsumer;
-import java.util.function.Consumer;
-import java.util.function.Supplier;
+import java.util.Set;
 
 public class LootTableDataGen extends LootTableProvider {
-    public LootTableDataGen(DataGenerator arg) {
-        super(arg);
-    }
-
-    @Override
-    protected void validate(Map<Identifier, LootTable> map, LootTableReporter validationtracker) {
-    }
-
-    @Override
-    protected List<Pair<Supplier<Consumer<BiConsumer<Identifier, LootTable.Builder>>>, LootContextType>> getTables() {
-        return Collections.singletonList(
-            Pair.of(BlockLootTableGen::new, LootContextTypes.BLOCK)
-        );
+    public LootTableDataGen(FabricDataOutput data) {
+        super(data, Set.of(), List.of(new LootTypeGenerator(BlockLootTableGen::new, LootContextTypes.BLOCK)));
     }
 
     public static class BlockLootTableGen extends BlockLootTableGenerator {
+        protected BlockLootTableGen() {
+            super(Set.of(), FeatureSet.empty());
+        }
+
         @Override
-        protected void addTables() {
+        public void generate() {
             addDrop(RRBlocks.camo1, RRBlocks.smartcamo);
             addDrop(RRBlocks.camo2, RRBlocks.smartcamo);
             addDrop(RRBlocks.camo3, RRBlocks.smartcamo);
@@ -54,6 +39,12 @@ public class LootTableDataGen extends LootTableProvider {
             addDrop(RRBlocks.flag5);
             addDrop(RRBlocks.flag6);
             addDrop(RRBlocks.flag7);
+            addDrop(RRBlocks.controller);
         }
+    }
+
+    @Override
+    public String getName() {
+        return "RivalRebels Loot Tables";
     }
 }
